# address_separator

./: .gitignore  README.md  debug.csv  main.ipynb  main.py  pyproject.toml  requirements.txt  structure.md
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
Papers/: policy.md
address_separator/: main.py
address_separator/data/: data_set.csv
address_separator/input/: input.csv  input.xlsx  input3.csv
address_separator/interfaces/: address.py
data/: Ordinance_designated_city.csv  administrative_district.csv  zenkoku.csv
docs/: structure.md
docs/docs/: document.md
input/: input.csv  input.xlsx  input1.csv  input4.csv  input9.csv
input/test_data/: input2.csv  input6.csv  input7.csv
output/: debug.csv  output.csv  test_output.csv
tests/: test.py
utils/: revise.py  shaping.py
utils/data_create/: get_zenkokucsv_data.py  shapping.py
utils/dataclass/: ConvertDataclassForOutputToDict.py  HomemadeClass.py
utils/extract/: city.py  district.py  house_number.py  prefacture.py  prefecture.py  town.py
utils/modify/: handleMiscellaneousBug.py  modifyBuildingDataFieldAfterSplit.py  modifyExceptionAddressExpression.py  modifySpcialPlaceNameAfterSplit.py  modifySpecialPlaceNameAfterSplit.py  operation.py  reSplitByEveryFieldAfterSplit.py
utils/os/: input.py  output.py
utils/preprocess/: operation.py  pretreatment.py
utils/shape/: detail_shape.py  output_data_shaping.py
utils/split/: pullOutBuildingDetailInfo.py  pullOutCityField.py  pullOutDistrictField.py  pullOutHouseNumberAndInvalidField.py  pullOutPrefectureField.py  pullOutTownField.py  (+1 more)
(+63 files in other folders)
